--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,1 +1,34 @@
-<p>login works!</p>
+<app-header></app-header>
+<form #f="ngForm" class="login-form" (ngSubmit)="submitFormHandler(f.value)">
+  <div class="login-container">
+    <div class="imgcontainer">
+      <img src="../../../assets/avatar-female.png" alt="Avatar" class="avatar">
+    </div>
+
+    <label for="email" class="email-login"><b>Email</b></label>
+    <input #userEmail="ngModel" [class.input-error]="userEmail.touched && !!userEmail.errors" type="text" name="email"
+      id="email" placeholder="john.doe@gmail.com" ngModel required appEmailValidator>
+    <p *ngIf="userEmail.touched && userEmail.errors?.required" class="error">
+      Email is required!
+    </p>
+    <p *ngIf="userEmail.touched && userEmail.errors?.emailValidator" class="error">
+      Email is not valid
+    </p>
+
+    <label for="password" class="password-login"><b>Password</b></label>
+    <input #userPassword="ngModel" [class.input-error]="userPassword.touched && !!userPassword.errors" type="password"
+      name="password" id="password" placeholder="******" ngModel required [minlength]="3">
+    <p *ngIf="userPassword.touched && userPassword.errors?.required" class="error">
+      Password is required!
+    </p>
+    <p *ngIf="userPassword.touched && userPassword.errors?.minlength" class="error">
+      Password must be at least 3 chars.
+    </p>
+
+    <button [disabled]="isLoading || f.invalid" class="submit-btn" >Login</button>
+    <app-loader [isLoading]="isLoading"></app-loader>
+    <!-- <span class="password">Forgot <a href="#">password?</a></span> -->
+  </div>
+</form>
+<app-footer></app-footer>
+{{ f.value | json }}
