--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -1,1 +1,68 @@
-<p>register works!</p>
+<app-header></app-header>
+<form class="register-form" [formGroup]="form" (ngSubmit)="submitHandler()" style="border:1px solid #ccc">
+  <div class="register-container">
+    <h2 class="sign-up-reg">Sign Up</h2>
+    <p class="sign-up-reg">Please fill in this form to create an account.</p>
+    <hr>
+
+    <label for="username"><span><b>Username</b></span></label>
+    <input [class.input-error]="form.get('username').touched && !!form.get('username').errors" type="text"
+      name="username" id="username" placeholder="Johny" formControlName="username">
+
+    <p *ngIf="form.get('username').touched && form.get('username').errors?.required" class="error">
+      Username is required!
+    </p>
+    <p *ngIf="form.get('username').touched && form.get('username').errors?.minlength" class="error">
+      Username must be at least 4 characters!
+    </p>
+
+    <label for="email"><span><b>Email</b></span></label>
+    <input [class.input-error]="form.get('email').touched && !!form.get('email').errors" type="email" name="email"
+      id="email" placeholder="john.doe@gmail.com" formControlName="email">
+    <p *ngIf="form.get('email').touched && form.get('email').errors?.required" class="error">
+      Email is required!
+    </p>
+    <p *ngIf="form.get('email').touched && form.get('email').errors?.emailValidator" class="error">
+      Email is not valid!
+    </p>
+
+    <!-- password -->
+
+    <label for="password"><span><b>Password</b></span></label>
+    <input [class.input-error]="form.get('password').touched && !!form.get('password').errors" type="password"
+      name="password" id="password" placeholder="******" formControlName="password">
+
+    <p *ngIf="form.get('password').touched && form.get('password').errors?.required" class="error">
+      Password is required!
+    </p>
+    <p *ngIf="form.get('password').touched && form.get('password').errors?.minlength" class="error">
+      Password must be at least 4 characters!
+    </p>
+
+    <!-- rePassword -->
+
+    <label for="rePassword"><span><b>Repeat password</b></span></label>
+    <input [class.input-error]="form.get('rePassword').touched && !!form.get('rePassword').errors" type="password"
+      name="rePassword" id="rePassword" placeholder="******" formControlName="rePassword">
+
+    <p *ngIf="form.get('rePassword').touched && form.get('rePassword').errors?.rePasswordValidator" class="error">
+      Repeat Password does not match password!
+    </p>
+    <p *ngIf="form.get('rePassword').touched && form.get('rePassword').errors?.required" class="error">
+      Repeat Password is required!
+    </p>
+
+    <!-- <label>
+      <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+    </label> -->
+
+    <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+
+    <div class="clearfix">
+      <button type="button" class="cancelbtn">Cancel</button>
+      <button [disabled]="isLoading || form.invalid" type="submit" class="signupbtn">Sign Up</button>
+    </div>
+    <app-loader [isLoading]="isLoading"></app-loader>
+  </div>
+</form>
+<app-footer></app-footer>
