--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -25,7 +25,7 @@
       Password must be at least 3 chars.
     </p>
 
-    <button [disabled]="isLoading || f.invalid" class="submit-btn" >Login</button>
+    <button class="submit-btn" >Login</button>
     <app-loader [isLoading]="isLoading"></app-loader>
     <!-- <span class="password">Forgot <a href="#">password?</a></span> -->
   </div>
