--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,1 +1,9 @@
-<p>not-found works!</p>
+<div class="main-container">
+  <app-header></app-header>
+
+  <div class="err-404">Error 404!</div>
+  <img src="../../assets/sad-face.png">
+  <div class="msg">Ooops! Page Not Found<p>Let's go <a routerLink="/">home</a> and try from there.</p>
+  
+    <app-footer></app-footer>
+</div>
