--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -5,17 +5,6 @@
     <p class="sign-up-reg">Please fill in this form to create an account.</p>
     <hr>
 
-    <label for="username"><span><b>Username</b></span></label>
-    <input [class.input-error]="form.get('username').touched && !!form.get('username').errors" type="text"
-      name="username" id="username" placeholder="Johny" formControlName="username">
-
-    <p *ngIf="form.get('username').touched && form.get('username').errors?.required" class="error">
-      Username is required!
-    </p>
-    <p *ngIf="form.get('username').touched && form.get('username').errors?.minlength" class="error">
-      Username must be at least 4 characters!
-    </p>
-
     <label for="email"><span><b>Email</b></span></label>
     <input [class.input-error]="form.get('email').touched && !!form.get('email').errors" type="email" name="email"
       id="email" placeholder="john.doe@gmail.com" formControlName="email">
@@ -59,8 +48,8 @@
     <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
 
     <div class="clearfix">
-      <button type="button" class="cancelbtn">Cancel</button>
-      <button [disabled]="isLoading || form.invalid" type="submit" class="signupbtn">Sign Up</button>
+      <button type="reset" class="cancelbtn">Cancel</button>
+      <button type="submit" class="signupbtn">Sign Up</button>
     </div>
     <app-loader [isLoading]="isLoading"></app-loader>
   </div>
