home & details ready

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,84 +2,32 @@
   <app-header></app-header>
 
   <section class="container-image">
-    <img class="back-image" src="../../assets/back-2.jpg" alt="background My recipes" />
+    <img class="back-image" src="../../assets/back-1.jpg" alt="background My recipes" />
     <div class="text-back">
-      <h1 class="title-back">Защото обичаме храната...</h1>
-      <p class="font-back">...храната лекува всички скърби, укрепва организма и развеселява сърцето и нищо не е
-        по-добре за човек, който плачеше много и се чувства като сирак, колко е добре да се нахрани. - Мика Валтари
-      </p>
-      <p class="font-back">- Аз винаги съм гладна, когато ни хранят толкова вкусно, - отговори Роза. - Алис Мънро</p>
-      <p class="font-back">- Брей, каква машина е човекът! Туряш й хляб, вино, риба, репички, и излизат въздишки, смях
-        и сънища. Фабрика! - Никос Казандзакис</p>
+      <p class="title-our-recipes">Welcome!</p>
+      <p>MY RECIPES е създадена, за да улесни хората при избора си на вкусни и атрактивни рецепти. Тук всеки може да
+        разгърне потенциала си.</p>
+        
+      <div class="logged" *ngIf="!isLogged">
+        <div class="not-logged">Ако все още не сте регистрирани може да го направите от тук: </div>
+
+        <a routerLink="/register">
+          REGISTER
+        </a>
+
+      </div>
     </div>
   </section>
 
-  <p class="title-our-recipes">Някои от нашите предложения...</p>
-  <section class="container-recipes">
+  <div class="recipes-container">
 
-    <article class="recipe-card">
-      <img class="rec-img" src="../../assets/tikvichki.jpg" />
-      <h2 class="title-card">Салата от сурови тиквички</h2>
-      <h3 class="products">Продукти:</h3>
-      <ul>
-        <li>Няколко крехки, млади тиквички </li>
-        <li>1-2 скилидки чесън</li>
-        <li>2-3 с.л. оцет балсамико или винен оцет</li>
-        <li>сол</li>
-        <li>копър и черен пипер на вкус</li>
-        <li>60-70 мл зехтин екстра върджин</li>
-      </ul>
-      <h3 class="preparation">Приготвяне:</h3>
-      <p>Тиквичките се измиват много добре, отрязва се опашката, но не се белят. С картофобелачка се нарязват на тънки,
-        дълги ивици. Поставят се в купа и се поръсват със сол. Оставят се да преседят, за да си пуснат водата и след
-        това нежно се изстискват. Добавя се пресования или ситно наситнения чесън, оцета, черния пипер и обилно се
-        полива с зехтин. Салатата се разбърква добре и се оставя в хладилника да отлежи няколко часа и тиквичките да
-        поемат ароматите.</p>
-    </article>
+    <div *ngFor="let recipe of recipeList" class="recipe-card">
+      <h3>{{recipe.title}}</h3>
+      <img class="image-recipe" src="{{recipe.imageURL}}">
+      <button type="submit" routerLink="/recipes/detail/{{recipe.objectId}}" class="btn">Виж цялата рецепта</button>
+    </div>
 
-    <article class="recipe-card">
-      <img class="rec-img" src="../../assets/rqpa.jpg" />
-      <h2 class="title-card">Салата от ряпа със заквасена сметана</h2>
-      <h3 class="products">Продукти:</h3>
-      <ul>
-        <li>1 средно-голяма дълга бяла ряпа </li>
-        <li>¼ средно голяма глава лук</li>
-        <li>3-4 с.л. заквасена сметана</li>
-        <li>1 ч.л. оцет – използвах Балсамико</li>
-        <li>3-4 стръка магданоз</li>
-        <li>сол и черен пипер на вкус</li>
-      </ul>
-      <h3 class="preparation">Приготвяне:</h3>
-      <p>Ряпата се обелва и се нарязва на тънки колелца.
-        Сметаната, лукът нарязан на полумесеци, солта, черния пипер, оцета и магданозът нарязан на ситно се разбъркват
-        добре.
-        Ряпата се полива с дресинга и салатата се сервира охладена.</p>
-    </article>
-
-    <article class="recipe-card">
-      <img class="rec-img" src="../../assets/riba.jpg" />
-      <h2 class="title-card">Риба “Бабка”</h2>
-      <h3 class="products">Продукти:</h3>
-      <ul>
-        <li>500 гр филе от бяла риба – използвах Хек</li>
-        <li>1 глава лук</li>
-        <li>50 грама масло</li>
-        <li>½ ч.л. индийско орехче</li>
-        <li>1 дебела филия вчерашен хляб</li>
-        <li>3 яйца</li>
-        <li>1 чаена чаша прясно мляко</li>
-        <li>4-5 стръка магданоз – в оригиналната рецепта копър</li>
-        <li>сол и черен пипер на вкус</li>
-      </ul>
-      <h3 class="preparation">Приготвяне:</h3>
-      <p>Рибните филета се нарязват на дребни парчета. Хлябът се нарязва на малки кубчета и се смесва с рибата. Залива
-        се с прясното мляко и се оставя да преседи, докато приготвяте останалите продукти.
-        Лукът се нарязва на дребно и се задушава в маслото на среден огън около 10 минути, докато стане прозрачен.
-        Лукът се сваля от котлона и се добавя към рибата. Яйцата се разделят на белтъци и жълтъци.
-      </p>
-    </article>
-
-  </section>
+  </div>
 
 
   <app-footer></app-footer>
