--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,9 +1,10 @@
-body {
+body, p {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 .back-image {
   width: 100%;
-  height: 30rem;
+  height: auto;
+  border-bottom: 2px solid orange;
 }
 .container-image {
   position: relative;
@@ -12,10 +13,22 @@ body {
 }
 .text-back {
   position: absolute;
-  top: 4rem;
+  top: 1rem;
   left: 4rem;
   color: rgb(64, 34, 92);
-  width: 30%;
+  width: 40%;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+a {
+  color: orange;
+  padding: 0.2em;
+}
+
+h3 {
+  color: rgb(69, 37, 99);
+  text-align: center;
+  text-decoration: underline;
 }
 
 .rec-img {
@@ -29,26 +42,56 @@ body {
   margin-top: 0.5rem;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-.container-recipes {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  /* grid-template-rows: 25% 100px auto; */
-}
-.recipe-card {
-  padding: 2rem;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+.recipes-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  margin-top: 2em;
 }
 
-.title-card, .products, .preparation {
-  text-align: center;
+.recipe-card {
+  width: 30%;
+  margin-bottom: 2em;
+  border: 2px solid orange;
 }
-.rec-img {
+
+.image-recipe {
+  width: 80%;
+  height: auto;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
 }
-.title-card {
-  color: rgb(236, 126, 75);
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+.btn {
+  margin: 1rem auto;
+  display: block;
+  background-color: rgb(69, 37, 99);
+  color: white;
+  cursor: pointer;
+  border-color: rgb(69, 37, 99);
+  border-radius: 0.2rem;
+  padding: 0.4em;
+}
+
+@media screen and (max-width: 850px) {
+  .text-back {
+    width: 60%;
+  }
+  .rec-img {
+    width: 80%;
+    height: 50px;
+    background-color: white;
+  }
+
+  .title-our-recipes {
+    font-size: 1rem;
+    margin-top: 0;
+  }
+
+  .recipes-container {
+    margin-top: 0em;
+  }
 }
