--- a/src/app/recipe/recipe-list/recipe-list.component.html
+++ b/src/app/recipe/recipe-list/recipe-list.component.html
@@ -5,3 +5,15 @@
 <div *ngIf="!recipeList">
   Loading...
 </div>
+
+<div class="recipes-container">
+
+  <div *ngFor="let recipe of recipeList" class="recipe-card">
+    <h3>{{recipe.title}}</h3>
+    <img class="image-recipe" src="{{recipe.imageURL}}">
+    <div class="ingr">{{recipe.ingredients}}</div>
+    <div class="prep">{{recipe.preparation}}</div>
+   
+  </div>
+
+</div>
