my recipes works

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -4,7 +4,7 @@
   <ul class="navbar">
     <!-- {{#if isLoggedIn}} -->
     <li *ngIf="isLogged"  class="nav-item">
-      <a class="nav-link" routerLink="">My Recipes</a>
+      <a class="nav-link" routerLink="/recipes">My Recipes</a>
     </li>
     <li *ngIf="isLogged"  class="nav-item">
       <a class="nav-link" routerLink="/recipes/new">New Recipe</a>
