some more styles

--- a/src/app/recipe/detail/detail.component.html
+++ b/src/app/recipe/detail/detail.component.html
@@ -11,7 +11,7 @@
   <div class="container-image">
     <div class="title-details">{{recipe.title}}</div>
     <p>Продукти:</p>
-    <div class="ingredients-details">{{recipe.ingredients}}</div>
+    <div class="ingredients-details"><pre>{{recipe.ingredients}}</pre></div>
     <p>Приготвяне:</p>
     <div class="prep-details">{{recipe.preparation}}</div>
     <button type="button" class="cancelbtn" routerLink="/">Назад</button>
