--- a/src/app/recipe/recipes/recipes.component.html
+++ b/src/app/recipe/recipes/recipes.component.html
@@ -9,7 +9,7 @@
     <h3>{{recipe.title}}</h3>
     <img class="image-recipe" src="{{recipe.imageURL}}">
     <p class="products">Продукти:</p>
-    <div class="ingr">{{recipe.ingredients}}</div>
+    <div class="ingr"><pre>{{recipe.ingredients}}</pre></div>
 
     <p class="prepMethod">Приготвяне:</p>
     <div class="description">{{recipe.preparation}}</div>
