--- a/src/app/recipe/detail/detail.component.css
+++ b/src/app/recipe/detail/detail.component.css
@@ -5,13 +5,18 @@
   column-gap: 1.2em;
 }
 .img {
-  width: 95%;
-  margin: 25% auto;
+  width: 60%;
+  margin: 2em auto;
   display: block;
+  border: 4px solid orange;
 }
 
 .img-cont {
   position: relative;
+}
+
+.ingredients-details {
+  font-size: 1.2em;
 }
 
 .title-details {
@@ -22,8 +27,9 @@
 }
 
 p {
-  font-size: 1.5em;
+  font-size: 1.3em;
   text-align: center;
+  color: orange;
 }
 
 .cancelbtn {
@@ -34,5 +40,5 @@ p {
   margin: 1.2em auto;
   display: block;
   cursor: pointer;
-  padding: 1.2em auto;
+  padding: 1em;
 }
