--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -25,10 +25,29 @@ a {
   padding: 0.2em;
 }
 
-h3 {
-  color: rgb(69, 37, 99);
+.form-group {
+  width: 60%;
+  margin: 2em auto;
   text-align: center;
-  text-decoration: underline;
+}
+
+.form-group > label {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  color:rgb(236, 126, 75);
+  margin-right: 1em;
+}
+
+.form-control {
+  padding: 0.5em;
+  width: 20em;
+  border: 1px solid rgb(253, 209, 173);
+}
+
+h3 {
+  color: white;
+  text-align: center;
+  text-shadow: 0px 0px 1px rgba(0,0,0,0.96);
+  color: rgb(236, 126, 75);
 }
 
 .rec-img {
@@ -54,7 +73,9 @@ h3 {
 .recipe-card {
   width: 30%;
   margin-bottom: 2em;
-  border: 2px solid orange;
+  -webkit-box-shadow: 0px 0px 7px -1px #000000; 
+  box-shadow: 0px 0px 7px -1px #000000;
+  border-radius: 1em;
 }
 
 .image-recipe {
@@ -63,17 +84,25 @@ h3 {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  -webkit-box-shadow: 0px 0px 7px -1px #000000; 
+  box-shadow: 0px 0px 7px -1px #000000;
+  border-radius: 1em;
 }
 
 .btn {
+  width: 80%;
+  font-size: ;
   margin: 1rem auto;
   display: block;
-  background-color: rgb(69, 37, 99);
-  color: white;
+  background-color: rgb(255, 231, 211);
+  color: orangered;
   cursor: pointer;
-  border-color: rgb(69, 37, 99);
+  border-color: rgb(253, 209, 173);
   border-radius: 0.2rem;
   padding: 0.4em;
+  border-style: solid;
+  -webkit-box-shadow: 0px 0px 7px -1px #000000; 
+  box-shadow: 0px 0px 7px -1px #000000;
 }
 
 @media screen and (max-width: 850px) {
