--- a/src/app/core/footer/footer.component.css
+++ b/src/app/core/footer/footer.component.css
@@ -1,9 +1,11 @@
 #footer {
-  border-top: 0.1rem solid  orangered;
-  background-color: rgb(253, 209, 173);
+  border-top: 0.1rem dotted  rgb(182, 179, 178);
+  background-color: rgb(248, 247, 247);
   width: 100%;
   height: 3rem;
   position: relative;
+  -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, -14px -3px 15px -20px rgba(0,0,0,0); 
+  box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, -14px -3px 15px -20px rgba(0,0,0,0);
 }
 .footer-text {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
