--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -1,10 +1,12 @@
 
 #header {
-  background-color: rgb(253, 209, 173);
   width: 100%;
   height: 4rem;
   position: relative;
-  border-bottom: 0.2rem solid orangered;
+  -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, -14px -3px 15px -20px rgba(0,0,0,0); 
+  box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, -14px -3px 15px -20px rgba(0,0,0,0);
+  background-color: rgb(248, 247, 247);
+  border-bottom: 0.1em dotted rgb(179, 178, 177);
 }
 
 .navbar {
@@ -21,7 +23,7 @@
   float: right;
 }
 .nav-link {
-  color: orangered;
+  color: rgb(75, 112, 19);
   text-decoration: none;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 1.1em;
