--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,18 +4,36 @@ body, p {
 .back-image {
   width: 100%;
   height: auto;
-  border-bottom: 2px solid orange;
+  -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, -14px -3px 15px -20px rgba(0,0,0,0); 
+  box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, -14px -3px 15px -20px rgba(0,0,0,0);
+  border-bottom: 0.1em dotted rgb(179, 178, 177);
+  opacity: 0.7;
 }
+
+.title-our-recipes {
+  color: rgb(95, 139, 28);
+  font-size: 2rem;
+  text-align: center;
+  margin-top: 0.5rem;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.container {
+  margin-top: -0.3em;
+  background-color: rgb(248, 247, 247);
+  -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, -14px -3px 15px -20px rgba(0,0,0,0); 
+  box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, -14px -3px 15px -20px rgba(0,0,0,0);
+}
+
 .container-image {
   position: relative;
-  text-align: center;
-  color: white;
+  text-align: center; 
 }
 .text-back {
   position: absolute;
   top: 1rem;
   left: 4rem;
-  color: rgb(64, 34, 92);
+  color: rgb(133, 132, 134);
   width: 40%;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
@@ -27,82 +45,62 @@ a {
 
 .form-group {
   width: 60%;
-  margin: 2em auto;
+  margin: 0 auto;
   text-align: center;
+  padding: 1.5em 0;
 }
 
 .form-group > label {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  color:rgb(236, 126, 75);
+  color:rgb(95, 139, 28);
   margin-right: 1em;
 }
 
 .form-control {
   padding: 0.5em;
   width: 20em;
-  border: 1px solid rgb(253, 209, 173);
-}
-
-h3 {
-  color: white;
-  text-align: center;
-  text-shadow: 0px 0px 1px rgba(0,0,0,0.96);
-  color: rgb(236, 126, 75);
-}
-
-.rec-img {
-  width: 80%;
-  height: auto;
-}
-.title-our-recipes {
-  color: rgb(236, 126, 75);
-  font-size: 2rem;
-  text-align: center;
-  margin-top: 0.5rem;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  border-radius: 1em;
 }
 
 .recipes-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  margin-top: 2em;
 }
 
 .recipe-card {
-  width: 30%;
+  width: 22%;
   margin-bottom: 2em;
-  -webkit-box-shadow: 0px 0px 7px -1px #000000; 
-  box-shadow: 0px 0px 7px -1px #000000;
+  border: 1px solid rgb(220, 219, 221);
   border-radius: 1em;
+  background-color: white;
+}
+
+h3 {
+  text-align: center;
 }
 
 .image-recipe {
-  width: 80%;
-  height: auto;
+  width: 100%;
+  height: 80%;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  -webkit-box-shadow: 0px 0px 7px -1px #000000; 
-  box-shadow: 0px 0px 7px -1px #000000;
-  border-radius: 1em;
+  border-top-left-radius: 1em;
+  border-top-right-radius: 1em;
 }
 
 .btn {
-  width: 80%;
-  font-size: ;
-  margin: 1rem auto;
+  width: 100%;
+  font-size: 0.8em;
   display: block;
-  background-color: rgb(255, 231, 211);
-  color: orangered;
+  background-color:rgb(95, 139, 28);
   cursor: pointer;
-  border-color: rgb(253, 209, 173);
-  border-radius: 0.2rem;
+  border-color: rgb(95, 139, 28);
+  border-bottom-right-radius: 1em;
+  border-bottom-left-radius: 1em;
   padding: 0.4em;
   border-style: solid;
-  -webkit-box-shadow: 0px 0px 7px -1px #000000; 
-  box-shadow: 0px 0px 7px -1px #000000;
+  color: white;
 }
 
 @media screen and (max-width: 850px) {
@@ -122,5 +120,10 @@ h3 {
 
   .recipes-container {
     margin-top: 0em;
+  }
+
+  .recipe-card {
+    width: 30%;
+   
   }
 }
