--- a/src/app/recipe/detail/detail.component.css
+++ b/src/app/recipe/detail/detail.component.css
@@ -1,18 +1,25 @@
-.container-details {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  font-family: Arial, Helvetica, sans-serif;
-  column-gap: 1.2em;
-}
-.img {
-  width: 60%;
-  margin: 2em auto;
-  display: block;
-  border: 4px solid orange;
+.section {
+  background-color: rgb(216, 213, 213);
+  -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, -14px -3px 15px -20px rgba(0,0,0,0); 
+  box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, -14px -3px 15px -20px rgba(0,0,0,0);
 }
 
-.img-cont {
-  position: relative;
+.container-details {
+  margin: 1em auto;
+  background-color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 60%;
+  box-shadow: -1px 1px 16px -1px rgba(0,0,0,0.75);
+  -webkit-box-shadow: -1px 1px 16px -1px rgba(0,0,0,0.75);
+  -moz-box-shadow: -1px 1px 16px -1px rgba(0,0,0,0.75);
+  padding: 1em;
+}
+
+.img {
+  width: 30%;
+  display: block;
+  margin: 2em;
+  float: left;
 }
 
 .ingredients-details {
@@ -21,8 +28,8 @@
 
 .title-details {
   margin-top: 1em;
-  color: purple;
-  font-size: 2em;
+  padding-top: 1em;
+  font-size: 1.5em;
   text-align: center;
 }
 
@@ -37,8 +44,12 @@ p {
   background-color: rgb(95, 139, 28);
   color: white;
   border: 1px solid rgb(95, 139, 28);
-  margin: 1.2em auto;
+  margin: 1em auto;
   display: block;
   cursor: pointer;
-  padding: 1em;
+  padding: 0.3em;
+}
+
+.prep-title {
+  clear: both;
 }
