--- a/src/app/recipe/recipes/recipes.component.css
+++ b/src/app/recipe/recipes/recipes.component.css
@@ -4,20 +4,25 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  background-color: rgb(248, 247, 247);
+  -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, -14px -3px 15px -20px rgba(0,0,0,0); 
+  box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, -14px -3px 15px -20px rgba(0,0,0,0);
+  justify-content: space-around;
+  padding: 2em;
 }
 
 .recipe-card {
-  width: 48%;
-  margin-bottom: 2em;
-  border: 2px solid orange;
+  width: 45%;
+  border: 1px solid rgb(220, 219, 221);
+  border-radius: 1em;
+  background-color: white;
 }
 
 .image-recipe {
-  width: 40%;
-  height: auto;
+  width: 30%;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 2em;
+  float: left;
 }
 
 h3, p {
