--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -5,27 +5,27 @@
       <img src="../../../assets/avatar-female.png" alt="Avatar" class="avatar">
     </div>
 
-    <label for="email" class="email-login"><b>Email</b></label>
+    <label for="email" class="email-login"><b>Имейл</b></label>
     <input #userEmail="ngModel" [class.input-error]="userEmail.touched && !!userEmail.errors" type="text" name="email"
       id="email" placeholder="john.doe@gmail.com" ngModel required appEmailValidator>
     <p *ngIf="userEmail.touched && userEmail.errors?.required" class="error">
-      Email is required!
+      Необходимо е да попълните имейл!
     </p>
     <p *ngIf="userEmail.touched && userEmail.errors?.emailValidator" class="error">
-      Email is not valid
+      Имейла не е валиден!
     </p>
 
-    <label for="password" class="password-login"><b>Password</b></label>
+    <label for="password" class="password-login"><b>Парола</b></label>
     <input #userPassword="ngModel" [class.input-error]="userPassword.touched && !!userPassword.errors" type="password"
       name="password" id="password" placeholder="******" ngModel required [minlength]="3">
     <p *ngIf="userPassword.touched && userPassword.errors?.required" class="error">
-      Password is required!
+      Необходимо е да попълните парола!
     </p>
     <p *ngIf="userPassword.touched && userPassword.errors?.minlength" class="error">
-      Password must be at least 3 chars.
+      Паролата трябва да е минимум 4 символа!
     </p>
 
-    <button class="submit-btn" >Login</button>
+    <button  [disabled]="isLoading || f.invalid" class="submit-btn" >Впиши</button>
     <app-loader [isLoading]="isLoading"></app-loader>
     <!-- <span class="password">Forgot <a href="#">password?</a></span> -->
   </div>
